--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
+html {
+    position: static;
+    overflow-y: hidden;
+    height: 100%;
+    max-height: 100%;
+}
 
+body {
+    overflow: hidden;
+    height: 100%;
+    max-height: 100%;
+}
