--- a/styles.css
+++ b/styles.css
@@ -9,4 +9,7 @@ body {
     overflow: hidden;
     height: 100%;
     max-height: 100%;
+    background-color: #1b1e2a;
 }
+
+-webkit-overflow-scrolling: touch
