--- a/styles.css
+++ b/styles.css
@@ -12,4 +12,12 @@ body {
     background-color: #1b1e2a;
 }
 
+.header {
+      padding: 30px;
+      text-align: center;
+      background: #bc1a6b;
+      color: white;
+      font-size: 30px;
+}
+
 -webkit-overflow-scrolling: touch
