--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .header {
       padding: 30px;
       text-align: center;
-      background: #bc1a6b;
+      background: #0B1029;
       color: white;
       font-size: 30px;
 }
